# fabula

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
bevy_mod_fabula/: Cargo.toml
bevy_mod_fabula/src/: lib.rs
src/: function.rs  lib.rs  model.rs  runner.rs  story.rs  variables.rs
src/function/: builtins.rs
test-data/sample-stories/: sally-Lines.csv  sally.yarnc
tests/: main.rs
