[package]
name = "fabula"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/garyttierney/fabula"
keywords = ["narrative", "story", "Yarn Spinner"]
categories = ["game-development"]
license = "Apache-2.0 OR MIT"
readme = "README.md"

description = "Run interactive Yarn stories in Rust"

[workspace]
members = ["bevy_mod_fabula"]

[dependencies]
log = "0.4"
prost = "0.11"
thiserror = "1"

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
env_logger = "0.10"
libtest-mimic = "0.6"

[[test]]
name = "main"
path = "tests/main.rs"
harness = false
